# mren

./: CMakeLists.txt  README.md  apple-x86_toolchain.cmake  build-toolchains.sh  c  cr  d  linux-x86_toolchain.cmake  mac-uni_toolchain.cmake  main.cpp  mren.apple-uni  mren.apple-x86  mren.linux-arm  mren.linux-x86  mren.mac-uni  mren.mac-x86
includes/: argparse.hpp
my_lib/: NFC2NFD.cpp  NFC2NFD.hpp  argparse_mren.cpp  argparse_mren.hpp  dos.cpp  dos.hpp  getFrancais.cpp  getFrancais.hpp  global.h  help-erreur.cpp  help-erreur.hpp  mren_locale.cpp  mren_locale.hpp  trouveMatch.cpp  trouveMatch.hpp
src_test/: mrenParser  mrenParser.cpp
version/: mren2024-02-08  mren2024-02-08.cpp  mren2024-02-20  mren2024-02-20.cpp
